--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       
   django:
     build: .
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations && python manage.py makemigrations getData && python manage.py migrate && python manage.py migrate getData && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     env_file:
